--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: lesson-plans
 resources:
-  # - frontend/deployment.yaml
-  # - frontend/service.yaml
-  # - frontend/ingress.yaml
+  - frontend/deployment.yaml
+  - frontend/service.yaml
+  - frontend/ingress.yaml
   - backend/deployment.yaml
   - backend/service.yaml
   - backend/ingress.yaml
