--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@rollup/plugin-yaml": "^3.1.0",
     "@vueform/multiselect": "^1.5.0",
     "axios": "^0.21.1",
+    "remarkable": "^2.0.1",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.6",
